[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/OnlineGame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Group 2.png" type="Texture" id=2]
[ext_resource path="res://Assets/static/Inter-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/TimeLabel.gd" type="Script" id=4]
[ext_resource path="res://Game/ScoreLabel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
font_data = ExtResource( 3 )

[node name="OnlineGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Group2" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.266667, 0.277778 )
texture = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="UI/Control"]
anchor_right = 1.0
margin_bottom = 168.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/CenterContainer"]
margin_left = 456.0
margin_top = 58.0
margin_right = 567.0
margin_bottom = 110.0

[node name="TimeLabel" type="Label" parent="UI/Control/CenterContainer/VBoxContainer"]
margin_right = 111.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_fonts/font = SubResource( 1 )
text = "gwasdasd"
align = 1
valign = 1
script = ExtResource( 4 )
timer_path = NodePath("../../../../../GameTimer")

[node name="ScoreLabel" type="Label" parent="UI/Control/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 111.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_fonts/font = SubResource( 2 )
text = "gwasdasd"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="GameTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )

[node name="Player" type="KinematicBody2D" parent="."]

[node name="Label" type="Label" parent="Player"]
margin_left = -96.0
margin_top = -40.0
margin_right = 96.0
margin_bottom = -26.0
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Player"]
